--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
 
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Sarah.</h1>
     <h2 class="description">a junior software developer.</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img class="mountain" src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+    <img class="mountain" src="mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class= "sarah" src="images/circle-cropped.png" alt="Sarah-headshot">
+      <img class= "sarah" src="circle-cropped.png" alt="Sarah-headshot">
       <h2>Hi there.</h2>
       <p class= "about"> My name is Sarah Mosley. I'm a pre-master student and software developer based in Lausanne, Switzerland.  </p>
     </div>
