--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="top-container">
     <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Sarah.</h1>
-    <h2 class="description">a junior software developer.</h2>
+    <h2 class="description">a software developer.</h2>
     <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
     <img class="mountain" src="mountain.png" alt="mountain-img">
   </div>
@@ -23,7 +23,7 @@
     <div class="profile">
       <img class= "sarah" src="circle-cropped.png" alt="Sarah-headshot">
       <h2>Hi there.</h2>
-      <p class= "about"> My name is Sarah Mosley. I'm a pre-master student and software developer based in Lausanne, Switzerland.  </p>
+      <p class= "about"> My name is Sarah Mosley. I'm a student and software developer based in Lausanne, Switzerland.  </p>
     </div>
     <hr>
     <div class="skills">
@@ -31,7 +31,7 @@
       <div class="skill-row">
         <img class="computer" src="" alt="">
         <h3>Adaptable</h3>
-        <p> I am a hard worker who can adapt to any task or environment. I have studied and worked internationally for the past 2 years which has forced me to become resourceful, organized, and motivated. </p>
+        <p> I am a hard worker who can adapt to any task or environment. I have studied and worked internationally for the past 2 years which has helped me to become resourceful, organized, and motivated. </p>
       </div>
       <div class="skill-row2">
         <img class="skill-img" src="" alt="">
