--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="skill-row">
         <img class="computer" src="" alt="">
         <h3>Adaptable</h3>
-        <p> I am a hard worker who can adapt to any task or environment. I have studied and worked internationally for the past 2 years which has helped me to become resourceful, organized, and motivated. </p>
+        <p> I am a hard worker who can adapt to any task or environment. I have studied and worked internationally for the past 2 years which has helped me become resourceful, organized, and motivated. </p>
       </div>
       <div class="skill-row2">
         <img class="skill-img" src="" alt="">
@@ -43,7 +43,7 @@
     <div class="contact-me">
       <h2 class= "getintouch">Get In Touch</h2>
       <h3>Want to reach out?</h3>
-      <p class="last-p">Send me an email by clicking the button below. If you want to learn more about me, feel free peruse the footer below.</p>
+      <p class="last-p">Send me an email by clicking the button below. If you want to learn more about me, feel free to peruse the footer below.</p>
       <button class="contact-b" type="button">
         <a class="email" href="mailto:sarahmosley01@gmail.com">CONTACT ME</a>
       </button>
